--- a/workers-site/package.json
+++ b/workers-site/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "@cloudflare/kv-asset-handler": "~0.0.11",
+    "@types/cookie": "^0.4.0",
+    "cookie": "^0.4.1",
     "sunder": "^0.7.0"
   },
   "devDependencies": {
