--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,13 @@
     "test:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --check"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.5",
+    "@chakra-ui/react": "^1.3.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "ajv": "^7.1.0",
+    "dayjs": "^1.10.4",
+    "framer-motion": "^3.3.0",
     "googleapis": "^67.0.0",
     "next": "latest",
     "react": "^17.0.1",
