--- a/workers-site/tsconfig.json
+++ b/workers-site/tsconfig.json
@@ -9,6 +9,9 @@
       "DOM",
       "DOM.Iterable"
     ],
+    "types": [
+      "@cloudflare/workers-types"
+    ],
     "moduleResolution": "node",
     "alwaysStrict": true,
     "esModuleInterop": true,
