--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,7 +5,9 @@ account_id = "020f099028cabbcf02f27b4e6b39cbfc"
 workers_dev = true
 route = ""
 zone_id = ""
-
+kv_namespaces = [
+	 { binding = "USERS", preview_id = "b66d3106391e41bc97c977d1d9cb06bc" }
+]
 [site]
 bucket = "./public"
 entry-point = "./workers-site"
