--- a/api/package.json
+++ b/api/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "with-typescript",
+  "private": true,
+  "name": "@philan-net/api",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "npm-run-all -p dev:next dev:localtunnel",
+    "dev:next": "next --port 3000",
+    "dev:localtunnel": "lt --port 3000 --subdomain philan-net-api",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
@@ -29,8 +32,10 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/simple-oauth2": "^4.1.0",
-    "create-validator-ts": "1.0.1",
-    "typescript": "4.1.5"
+    "create-validator-ts": "^1.0.1",
+    "localtunnel": "^2.0.1",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^4.1.5"
   },
   "license": "MIT"
 }
