feat: implement vercel

--- a/api/package.json
+++ b/api/package.json
@@ -3,13 +3,14 @@
   "name": "@philan-net/api",
   "version": "1.0.0",
   "scripts": {
-    "dev": "npm-run-all -p dev:next dev:localtunnel",
+    "dev": "npm-run-all -p dev:next",
     "dev:next": "next --port 3000",
     "dev:localtunnel": "lt --port 3000 --subdomain philan-net-api",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc",
     "validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\"",
+    "watch:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --watch",
     "test:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --check"
   },
   "dependencies": {
@@ -18,21 +19,31 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "ajv": "^7.1.0",
+    "cloudflare-kv-storage-rest": "^1.0.2",
     "dayjs": "^1.10.4",
+    "express-session": "^1.17.1",
+    "express-session-cloudflare-kv": "^1.0.1",
+    "form-data": "^4.0.0",
     "framer-motion": "^3.3.0",
     "googleapis": "^67.0.0",
     "next": "latest",
+    "next-connect": "^0.10.0",
+    "next-session": "^3.4.0",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-use": "^17.1.1",
     "simple-oauth2": "^4.2.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
     "@types/node": "^14.14.27",
+    "@types/node-fetch": "^2.5.8",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/simple-oauth2": "^4.1.0",
-    "create-validator-ts": "^1.0.1",
+    "create-validator-ts": "^1.0.2",
     "localtunnel": "^2.0.1",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.1.5"
