feat: OGP support

--- a/api/package.json
+++ b/api/package.json
@@ -29,10 +29,13 @@
     "next": "latest",
     "next-connect": "^0.10.0",
     "node-fetch": "^2.6.1",
+    "playwright-aws-lambda": "^0.6.0",
+    "playwright-core": "^1.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-use": "^17.1.1",
-    "simple-oauth2": "^4.2.0"
+    "safe-marked": "^5.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
