--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "googleapis": "^67.0.0",
     "next": "latest",
     "next-connect": "^0.10.0",
+    "next-iron-session": "^4.1.12",
     "node-fetch": "^2.6.1",
     "playwright-aws-lambda": "^0.6.0",
     "playwright-core": "^1.9.0",
