--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,8 @@
     "next-connect": "^0.10.0",
     "next-iron-session": "^4.1.12",
     "node-fetch": "^2.6.1",
+    "pino": "^6.11.1",
+    "pino-logflare": "^0.3.7",
     "playwright-aws-lambda": "^0.6.0",
     "playwright-core": "^1.9.0",
     "react": "^17.0.1",
@@ -43,6 +45,7 @@
     "@types/express-session": "^1.17.3",
     "@types/node": "^14.14.27",
     "@types/node-fetch": "^2.5.8",
+    "@types/pino": "^6.3.6",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/simple-oauth2": "^4.1.0",
