--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "1.0.0",
   "workspaces": [
     "worker",
-    "api"
+    "web"
   ],
   "scripts": {
     "dev": "concurrently --names 'API,WORKER' -c 'bgBlue.bold,bgMagenta.bold' 'npm:dev:api' 'npm:dev:worker'",
-    "dev:api": "cd api && yarn dev",
-    "dev:worker": "cd worker && yarn dev",
+    "dev:web": "cd web && yarn dev",
+    "dev:worker": "#cd worker && yarn dev",
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
     "prepare": "git config --local core.hooksPath .githook"
   },
@@ -38,7 +38,6 @@
   "devDependencies": {
     "concurrently": "^5.3.0",
     "lint-staged": "^10.5.4",
-    "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1"
   }
 }
