--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "web"
   ],
   "scripts": {
-    "dev": "concurrently --names 'API,WORKER' -c 'bgBlue.bold,bgMagenta.bold' 'npm:dev:api' 'npm:dev:worker'",
+    "dev": "npm run dev:web",
+    "_dev": "concurrently --names 'API,WORKER' -c 'bgBlue.bold,bgMagenta.bold' 'npm:dev:api' 'npm:dev:worker'",
     "dev:web": "cd web && yarn dev",
     "dev:worker": "#cd worker && yarn dev",
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
