--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@chakra-ui/react": "^1.3.3",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@kvs/env": "^1.1.0",
     "ajv": "^7.1.0",
     "cloudflare-kv-storage-rest": "^1.0.2",
     "country-to-currency": "^1.0.2",
