--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "web"
   ],
   "scripts": {
+    "bootstrap": "cp web/.env.example web/.env",
     "dev": "npm run dev:web",
     "_dev": "concurrently --names 'API,WORKER' -c 'bgBlue.bold,bgMagenta.bold' 'npm:dev:api' 'npm:dev:worker'",
     "dev:web": "cd web && yarn dev",
