--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "test:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --check"
   },
   "dependencies": {
+    "feed": "^4.2.2",
     "@chakra-ui/icons": "^1.0.5",
     "@chakra-ui/react": "^1.3.3",
     "@emotion/react": "^11.1.5",
