--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,6 @@
     "test:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --check"
   },
   "dependencies": {
-    "feed": "^4.2.2",
     "@chakra-ui/icons": "^1.0.5",
     "@chakra-ui/react": "^1.3.3",
     "@emotion/react": "^11.1.5",
@@ -25,6 +24,7 @@
     "dayjs": "^1.10.4",
     "express-session": "^1.17.1",
     "express-session-cloudflare-kv": "^1.0.1",
+    "feed": "^4.2.2",
     "form-data": "^4.0.0",
     "framer-motion": "^3.3.0",
     "googleapis": "^67.0.0",
@@ -40,7 +40,8 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-use": "^17.1.1",
-    "safe-marked": "^5.0.0"
+    "safe-marked": "^5.0.0",
+    "shorthash2": "^1.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
