--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "dev:next": "next --port 3000",
     "build": "next build",
     "start": "next start",
+    "test": "npm run type-check",
     "type-check": "tsc",
     "validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\"",
     "watch:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --watch",
