--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,7 @@
     "dev:next": "next --port 3000",
     "build": "next build",
     "start": "next start",
-    "test": "npm run type-check",
+    "test": "npm run type-check && jest",
     "type-check": "tsc",
     "validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\"",
     "watch:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --watch",
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/jest": "^26.0.21",
     "@types/node": "^14.14.27",
     "@types/node-fetch": "^2.5.8",
     "@types/pino": "^6.3.6",
@@ -58,8 +59,11 @@
     "@types/react-select": "^4.0.13",
     "@types/simple-oauth2": "^4.1.0",
     "create-validator-ts": "^1.0.2",
+    "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
-    "typescript": "^4.1.5"
+    "ts-jest": "^26.5.4",
+    "typescript": "^4.1.5",
+    "dotenv": "^8.2.0"
   },
   "license": "MIT"
 }
