CI: fix secrets

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Test
         run: yarn test
         env:
-          TEST_GOOGLE_CREDENTIAL_BASE64: ${{secret.TEST_GOOGLE_CREDENTIAL_BASE64}}
+          TEST_GOOGLE_CREDENTIAL_BASE64: ${{secrets.TEST_GOOGLE_CREDENTIAL_BASE64}}
