--- a/web/package.json
+++ b/web/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "npm-run-all -p dev:next",
     "dev:next": "next --port 3000",
+    "dev:prod": "ENABLE_PRODUCTION_DATA=1 next --port 3000",
     "build": "next build",
     "start": "next start",
-    "test": "npm run type-check",
+    "test": "npm run type-check && jest",
+    "updateSnapshot": "jest -u",
     "type-check": "tsc",
     "validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\"",
     "watch:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --watch",
@@ -45,11 +47,13 @@
     "react-select": "^4.2.1",
     "react-use": "^17.1.1",
     "safe-marked": "^5.0.0",
-    "shorthash2": "^1.0.3"
+    "shorthash2": "^1.0.3",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/jest": "^26.0.21",
     "@types/node": "^14.14.27",
     "@types/node-fetch": "^2.5.8",
     "@types/pino": "^6.3.6",
@@ -57,9 +61,13 @@
     "@types/react-dom": "^17.0.1",
     "@types/react-select": "^4.0.13",
     "@types/simple-oauth2": "^4.1.0",
+    "@types/lodash": "^4.14.168",
     "create-validator-ts": "^1.0.2",
+    "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
-    "typescript": "^4.1.5"
+    "ts-jest": "^26.5.4",
+    "typescript": "^4.1.5",
+    "dotenv": "^8.2.0"
   },
   "license": "MIT"
 }
