--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,8 @@
     "validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\"",
     "watch:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --watch",
     "test:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --check",
+    "migrateion:prepare:test": "ts-node --project _migration/tsconfig.json --require dotenv/config _migration/prepare.test.ts",
+    "migrateion:test": "npm run migrateion:prepare:test && ts-node --project _migration/tsconfig.json --require dotenv/config _migration/index.ts",
     "migrateion:prepare:dev": "ts-node --project _migration/tsconfig.json --require dotenv/config _migration/prepare.ts",
     "migrateion:start:dev": "ts-node --project _migration/tsconfig.json --require dotenv/config _migration/index.ts",
     "migrateion:prepare:prod": "ENABLE_PRODUCTION_DATA=1 ts-node --project _migration/tsconfig.json --require dotenv/config _migration/prepare.ts",
