--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "npm-run-all -p dev:next",
     "dev:next": "next --port 3000",
+    "dev:local": "FORCE_NO_USE_CF=1 next --port 3000",
     "dev:prod": "ENABLE_PRODUCTION_DATA=1 next --port 3000",
     "build": "next build",
     "start": "next start",
@@ -14,7 +15,13 @@
     "validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\"",
     "watch:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --watch",
     "test:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --check",
-    "maintenance:backup": "ts-node --require dotenv/config _maintenance/backup.ts"
+    "migrateion:prepare:test": "ts-node --project _migration/tsconfig.json --require dotenv/config _migration/prepare-for-test.ts",
+    "migrateion:test": "npm run migrateion:prepare:test && ts-node --project _migration/tsconfig.json --require dotenv/config _migration/index.ts",
+    "migrateion:prepare:dev": "ts-node --project _migration/tsconfig.json --require dotenv/config _migration/prepare.ts",
+    "migrateion:start:dev": "ts-node --project _migration/tsconfig.json --require dotenv/config _migration/index.ts",
+    "migrateion:prepare:prod": "ENABLE_PRODUCTION_DATA=1 ts-node --project _migration/tsconfig.json --require dotenv/config _migration/prepare.ts",
+    "migrateion:start:prod": "ENABLE_PRODUCTION_DATA=1 ts-node --project _migration/tsconfig.json --require dotenv/config _migration/index.ts",
+    "_download_xlsx": "ts-node --project _migration/tsconfig.json --require dotenv/config _migration/download_xlsx.ts"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.5",
@@ -33,6 +40,7 @@
     "form-data": "^4.0.0",
     "framer-motion": "^3.3.0",
     "googleapis": "^67.0.0",
+    "lodash": "^4.17.21",
     "next": "latest",
     "next-connect": "^0.10.0",
     "next-iron-session": "^4.1.12",
@@ -47,13 +55,13 @@
     "react-select": "^4.2.1",
     "react-use": "^17.1.1",
     "safe-marked": "^5.0.0",
-    "shorthash2": "^1.0.3",
-    "lodash": "^4.17.21"
+    "shorthash2": "^1.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/jest": "^26.0.21",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.27",
     "@types/node-fetch": "^2.5.8",
     "@types/pino": "^6.3.6",
@@ -61,13 +69,13 @@
     "@types/react-dom": "^17.0.1",
     "@types/react-select": "^4.0.13",
     "@types/simple-oauth2": "^4.1.0",
-    "@types/lodash": "^4.14.168",
-    "create-validator-ts": "^1.0.2",
+    "create-validator-ts": "^1.0.4",
+    "dotenv": "^8.2.0",
     "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
     "ts-jest": "^26.5.4",
     "typescript": "^4.1.5",
-    "dotenv": "^8.2.0"
+    "del": "^6.0.0"
   },
   "license": "MIT"
 }
