Rename .githook to .githooks [shepherd]

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev:web": "cd web && yarn dev",
     "dev:worker": "#cd worker && yarn dev",
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
-    "prepare": "git config --local core.hooksPath .githook"
+    "prepare": "git config --local core.hooksPath .githooks"
   },
   "repository": {
     "type": "git",
