--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,8 @@
     "dev:prod": "ENABLE_PRODUCTION_DATA=1 next --port 3000",
     "build": "next build",
     "start": "next start",
-    "test": "yarn run type-check && yarn run test:validator-ts && jest",
+    "test": "yarn run type-check && yarn run lint && yarn run test:validator-ts && jest",
+    "lint": "next lint",
     "updateSnapshot": "jest -u",
     "type-check": "tsc",
     "validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\"",
@@ -41,7 +42,7 @@
     "framer-motion": "^3.3.0",
     "googleapis": "^67.0.0",
     "lodash": "^4.17.21",
-    "next": "latest",
+    "next": "^11.0.1",
     "next-connect": "^0.10.0",
     "next-iron-session": "^4.1.12",
     "node-fetch": "^2.6.1",
@@ -70,12 +71,14 @@
     "@types/react-select": "^4.0.13",
     "@types/simple-oauth2": "^4.1.0",
     "create-validator-ts": "^1.0.4",
+    "del": "^6.0.0",
     "dotenv": "^8.2.0",
+    "eslint": "^7.30.0",
+    "eslint-config-next": "^11.0.1",
     "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
     "ts-jest": "^26.5.4",
-    "typescript": "^4.1.5",
-    "del": "^6.0.0"
+    "typescript": "^4.1.5"
   },
   "license": "MIT"
 }
