--- a/web/gas/package.json
+++ b/web/gas/package.json
@@ -5,8 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "microbundle -i ./subscription.ts -o ../pages/api/appsscript/subscription.gas --no-pkg-main -f umd --no-sourcemap",
-    "watch": "microbundle watch -i ./subscription.ts -o ../pages/api/appsscript/subscription.gas --no-pkg-main -f umd --no-sourcemap",
+    "build": "webpack --mode=production",
+    "dev": "webpack --mode=development --watch",
+    "a": "microbundle -i ./subscription.ts -o ../pages/api/subscription/subscription.gs --no-pkg-main -f iife --name setTrigger --no-sourcemap",
     "test": "mocha"
   },
   "keywords": [],
@@ -14,10 +15,14 @@
   "license": "MIT",
   "devDependencies": {
     "@types/google-apps-script": "^1.0.37",
-    "microbundle": "^0.13.3",
+    "gas-webpack-plugin": "^2.0.2",
     "mocha": "^9.0.2",
+    "ts-loader": "^9.2.3",
     "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "webpack": "^5.46.0",
+    "webpack-cli": "^4.7.2",
+    "microbundle": "^0.13.3"
   },
   "dependencies": {
     "cron-parser": "^3.5.0"
