--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,7 @@
     "aws-sdk": "^2.863.0",
     "cloudflare-kv-storage-rest": "^1.0.2",
     "country-to-currency": "^1.0.2",
+    "cron-parser": "^3.5.0",
     "dayjs": "^1.10.4",
     "express-session": "^1.17.1",
     "express-session-cloudflare-kv": "^1.0.1",
