--- a/web/serverless.yml
+++ b/web/serverless.yml
@@ -1,5 +1,5 @@
 philan-web:
-  component: "./node_modules/@sls-next/serverless-component"
+  component: "@sls-next/serverless-component@3.2.0"
   inputs:
     name: philan-web # lambda
     bucketName: philan-web # s3
