--- a/web/package.json
+++ b/web/package.json
@@ -48,6 +48,7 @@
     "node-fetch": "^2.6.1",
     "pino": "^6.11.1",
     "pino-logflare": "^0.3.7",
+    "pino-pretty": "^5.1.2",
     "playwright-aws-lambda": "^0.6.0",
     "playwright-core": "^1.9.0",
     "react": "^17.0.1",
