feat: implement serverless

--- a/web/.env.example
+++ b/web/.env.example
@@ -1,4 +1,5 @@
-CLIENT_ID="472580795805-ds8iducogauep9vqbjjpbq8jt5gmud71.apps.googleusercontent.com"
-CLIENT_SECRET="0hOUl_64per-zLfgdvT-PjKA"
-SESSION_COOKIE_SECRET="TCxTny3H6f5Q-drank-dolcan-ungull-ayin-ailing-dudman-jarbot"
-AWS_S3_STATS_ENABLED=false
+APP_CLIENT_ID="472580795805-ds8iducogauep9vqbjjpbq8jt5gmud71.apps.googleusercontent.com"
+APP_CLIENT_SECRET="0hOUl_64per-zLfgdvT-PjKA"
+APP_SESSION_COOKIE_SECRET="TCxTny3H6f5Q-drank-dolcan-ungull-ayin-ailing-dudman-jarbot"
+APP_AWS_S3_STATS_ENABLED=false
+APP_OAUTH_REDIRECT_URL="http://localhost:3000/api/auth/authorized"
