--- a/web/.gitignore
+++ b/web/.gitignore
@@ -1,5 +1,8 @@
 .env
+.env.local
 .env.production
+.serverless
+.serverless_nextjs
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
