--- a/web/package.json
+++ b/web/package.json
@@ -36,27 +36,23 @@
     "country-to-currency": "^1.0.2",
     "dayjs": "^1.10.4",
     "express-session": "^1.17.1",
-    "express-session-cloudflare-kv": "^1.0.1",
     "feed": "^4.2.2",
     "form-data": "^4.0.0",
     "framer-motion": "^3.3.0",
     "googleapis": "^67.0.0",
     "lodash": "^4.17.21",
+    "markdown-it": "^12.2.0",
     "next": "^11.0.1",
     "next-connect": "^0.10.0",
     "next-iron-session": "^4.1.12",
     "node-fetch": "^2.6.1",
     "pino": "^6.11.1",
     "pino-logflare": "^0.3.7",
-    "pino-pretty": "^5.1.2",
-    "playwright-aws-lambda": "^0.6.0",
-    "playwright-core": "^1.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-select": "^4.2.1",
     "react-use": "^17.1.1",
-    "safe-marked": "^5.0.0",
     "shorthash2": "^1.0.3"
   },
   "devDependencies": {
@@ -64,6 +60,7 @@
     "@types/express-session": "^1.17.3",
     "@types/jest": "^26.0.21",
     "@types/lodash": "^4.14.168",
+    "@types/markdown-it": "^12.0.3",
     "@types/node": "^14.14.27",
     "@types/node-fetch": "^2.5.8",
     "@types/pino": "^6.3.6",
