--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "lint": "next lint",
     "updateSnapshot": "jest -u",
     "type-check": "tsc",
+    "deploy": "serverless",
     "validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\"",
     "watch:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --watch",
     "test:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --check",
@@ -56,6 +57,7 @@
     "shorthash2": "^1.0.3"
   },
   "devDependencies": {
+    "@sls-next/serverless-component": "^3.2.0",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/jest": "^26.0.21",
@@ -75,6 +77,7 @@
     "eslint-config-next": "^11.0.1",
     "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
+    "serverless": "^2.53.0",
     "ts-jest": "^26.5.4",
     "typescript": "^4.1.5"
   },
