--- a/web/serverless.yml
+++ b/web/serverless.yml
@@ -1,5 +1,5 @@
 philan-net:
-  component: "@sls-next/serverless-component@3.2.0"
+  component: "./node_modules/@sls-next/serverless-component"
   inputs:
     name: "philan-net-web-serverless"
     bucketName: "philan-net-web-serverless"
