--- a/tools/maintenance/package.json
+++ b/tools/maintenance/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "dayjs": "^1.10.4",
     "express-session-cloudflare-kv": "^1.0.1",
-    "@philan-net/web": "^1.0.0",
+    "@philan-net/web": "file:../../web",
     "dotenv": "^8.2.0",
     "npm-run-all": "^4.1.5",
     "ts-node": "^9.1.1",
