--- a/web/package.json
+++ b/web/package.json
@@ -7,13 +7,13 @@
     "dev:next": "next --port 3000",
     "dev:local": "FORCE_NO_USE_CF=1 next --port 3000",
     "dev:prod": "ENABLE_PRODUCTION_DATA=1 next --port 3000",
-    "build": "NODE_OPTIONS=--max-old-space-size=4096 next build",
+    "build": "next build",
     "start": "next start",
     "test": "yarn run type-check && yarn run lint && yarn run test:validator-ts && jest",
     "lint": "next lint",
     "updateSnapshot": "jest -u",
     "type-check": "tsc",
-    "deploy": "serverless",
+    "deploy": "NODE_OPTIONS=--max-old-space-size=4096 serverless",
     "validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\"",
     "watch:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --watch",
     "test:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --check",
