--- a/web/serverless.yml
+++ b/web/serverless.yml
@@ -1,6 +1,7 @@
 philan-net:
   component: "./node_modules/@sls-next/serverless-component"
   inputs:
+    distributionId: E3BAOF26FT6UJU
     name: "philan-net-web-serverless"
     bucketName: "philan-net-web-serverless"
     memory: 2048
