--- a/web/serverless.yml
+++ b/web/serverless.yml
@@ -2,7 +2,7 @@ philan-net:
   component: "./node_modules/@sls-next/serverless-component"
   inputs:
     cloudfront:
-      distributionId: E3BAOF26FT6UJU
+      distributionId: ENYJDWLSWNBIQ
     name: "philan-net-web-serverless"
     bucketName: "philan-net-web-serverless"
     memory: 2048
