--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,8 @@
     "lint": "next lint",
     "updateSnapshot": "jest -u",
     "type-check": "tsc",
-    "deploy": "NODE_OPTIONS=--max-old-space-size=4096 serverless",
+    "deploy:production": "rm -rf .serverless .serverless_nextjs && cp serverless.production.yml serverless.yml && NODE_OPTIONS=--max-old-space-size=4096 serverless",
+    "deploy:evaluation": "rm -rf .serverless .serverless_nextjs && cp serverless.evaluation.yml serverless.yml && NODE_OPTIONS=--max-old-space-size=4096 serverless",
     "validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\"",
     "watch:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --watch",
     "test:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --check",
