--- a/.github/workflows/evaluation.yml
+++ b/.github/workflows/evaluation.yml
@@ -1,10 +1,13 @@
-name: deploy
-on:
-  push:
-    branches: [ main ]
+name: deploy-to-evaluation
+on: [push]
+permissions:
+  contents: read
 jobs:
   deploy:
-    name: "deploy"
+    name: "deploy to evaluation"
+    environment:
+      name: evaluation
+      url: https://evaluation.philan.net
     runs-on: ubuntu-18.04
     steps:
       - name: checkout
@@ -23,23 +26,18 @@ jobs:
         run: yarn install
         working-directory: web/
       - name: Deploy
-        run: yarn run deploy
+        run: yarn run deploy:evaluation
         working-directory: web/
         env:
-          APP_CF_namespace_session: ${{ secrets.APP_CF_namespace_session }}
           APP_CF_authKey: ${{ secrets.APP_CF_authKey }}
           APP_CF_accountId: ${{ secrets.APP_CF_accountId }}
-          APP_CF_namespace_user: ${{ secrets.APP_CF_namespace_user }}
           APP_CF_authEmail: ${{ secrets.APP_CF_authEmail }}
+          APP_CF_namespace_user: ${{ secrets.APP_CF_namespace_user }}
           APP_LOGFLARE_API_KEY: ${{ secrets.APP_LOGFLARE_API_KEY }}
           APP_SESSION_COOKIE_SECRET: ${{ secrets.APP_SESSION_COOKIE_SECRET }}
           APP_STATS_ENABLED: ${{ secrets.APP_STATS_ENABLED }}
-          APP_STATS_AWS_ACCESS_KEY_ID: ${{ secrets.APP_STATS_AWS_ACCESS_KEY_ID }}
-          APP_STATS_AWS_SECRET_ACCESS_KEY: ${{ secrets.APP_STATS_AWS_SECRET_ACCESS_KEY }}
           APP_GOOGLE_OAUTH_CLIENT_ID: ${{ secrets.APP_GOOGLE_OAUTH_CLIENT_ID }}
           APP_GOOGLE_OAUTH_CLIENT_SECRET: ${{ secrets.APP_GOOGLE_OAUTH_CLIENT_SECRET }}
-          APP_AWS_SECRET_ACCESS_KEY: ${{ secrets.APP_AWS_SECRET_ACCESS_KEY }}
-          APP_AWS_ACCESS_KEY_ID: ${{ secrets.APP_AWS_ACCESS_KEY_ID }}
           APP_OAUTH_REDIRECT_URL: ${{ secrets.APP_OAUTH_REDIRECT_URL }}
           NODE_ENV: "production"
           NEXT_PUBLIC_MAINTENANCE_MODE: 0
