--- a/web/serverless.env.yml
+++ b/web/serverless.env.yml
@@ -1,7 +1,7 @@
-APP_CF_authKey: ${env.APP_CF_authKey}
-APP_CF_accountId: ${env.APP_CF_accountId}
-APP_CF_namespace_user: ${env.APP_CF_namespace_user}
-APP_CF_authEmail: ${env.APP_CF_authEmail}
+APP_CF_AUTHKEY: ${env.APP_CF_AUTHKEY}
+APP_CF_ACCOUNT_ID: ${env.APP_CF_ACCOUNT_ID}
+APP_CF_NAMESPACE_USER: ${env.APP_CF_NAMESPACE_USER}
+APP_CF_AUTH_EMAIL: ${env.APP_CF_AUTH_EMAIL}
 APP_LOGFLARE_API_KEY: ${env.APP_LOGFLARE_API_KEY}
 APP_SESSION_COOKIE_SECRET: ${env.APP_SESSION_COOKIE_SECRET}
 APP_STATS_ENABLED: ${env.APP_STATS_ENABLED}
