--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -22,10 +22,17 @@
     "target": "ES2020"
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    ".cache",
+    ".next",
+    ".serverless",
+    ".serverless_nextjs"
   ],
   "include": [
-    "**/*.ts",
-    "**/*.tsx"
+    "api-utils/**/*.{ts,tsx}",
+    "components/**/*.{ts,tsx}",
+    "domain/**/*.{ts,tsx}",
+    "pages/**/*.{ts,tsx}",
+    "test/**/*.{ts,tsx}"
   ]
 }
