--- a/web/package.json
+++ b/web/package.json
@@ -15,9 +15,9 @@
     "type-check": "tsc",
     "deploy:production": "rm -rf .serverless .serverless_nextjs && cp serverless.production.yml serverless.yml && NODE_OPTIONS=--max-old-space-size=4096 serverless",
     "deploy:evaluation": "rm -rf .serverless .serverless_nextjs && cp serverless.evaluation.yml serverless.yml && NODE_OPTIONS=--max-old-space-size=4096 serverless",
-    "validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\"",
-    "watch:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --watch",
-    "test:validator-ts": "create-validator-ts \"pages/api/**/api-types.ts\" --check",
+    "validator-ts": "create-validator-ts --cache \"pages/api/**/api-types.ts\"",
+    "watch:validator-ts": "create-validator-ts --cache \"pages/api/**/api-types.ts\" --watch",
+    "test:validator-ts": "create-validator-ts --cache \"pages/api/**/api-types.ts\" --check",
     "migrateion:prepare:test": "ts-node --project _migration/tsconfig.json --require dotenv/config _migration/prepare-for-test.ts",
     "migrateion:test": "npm run migrateion:prepare:test && ts-node --project _migration/tsconfig.json --require dotenv/config _migration/index.ts",
     "migrateion:prepare:dev": "ts-node --project _migration/tsconfig.json --require dotenv/config _migration/prepare.ts",
@@ -72,7 +72,7 @@
     "@types/react-dom": "^17.0.1",
     "@types/react-select": "^4.0.13",
     "@types/simple-oauth2": "^4.1.0",
-    "create-validator-ts": "^1.0.4",
+    "create-validator-ts": "^4.0.2",
     "del": "^6.0.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.30.0",
