CI: update ubuntu-18.04 to ubuntu-latest [shepherd]

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -7,7 +7,7 @@ permissions:
 jobs:
   deploy:
     name: "deploy to production"
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     environment:
       name: Production
       url: https://d25zzlzg6iw41r.cloudfront.net
