--- a/.github/workflows/evaluation.yml
+++ b/.github/workflows/evaluation.yml
@@ -10,7 +10,7 @@ jobs:
     environment:
       name: evaluation
       url: https://evaluation.philan.net
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: checkout
         uses: actions/checkout@v2
