--- a/web/package.json
+++ b/web/package.json
@@ -83,5 +83,9 @@
     "ts-jest": "^26.5.4",
     "typescript": "^4.1.5"
   },
+  "resolutions": {
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1"
+  },
   "license": "MIT"
 }
