--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -19,7 +19,8 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "ES2020"
+    "target": "ES2020",
+    "incremental": true
   },
   "exclude": [
     "node_modules",
